# closing-labels

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LISENSE  Makefile  README.md  SECURITY.md  action.yml  actions.yml  entrypoint.sh  get-closing-labels  get-closing-labels.sh  get-removed-labels  get-removed-labels.sh  pyproject.toml
.github/: release.yml
.github/workflows/: bot-prs.yml  build.yml  integration.yml  sync-labels.yml
src/closing_labels/: github.py  labels.py  main.py
src/closing_labels/queries/: closing_labels.graphql  removed_labels.graphql
tests/: test_github.py  test_labels.py  test_main.py
